<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DND辅助器</string>
    <string name="author">欧德之怒</string>
    <string name="website">oudezhinu.site</string>
    <string name="language">语言</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="language_cn">简体中文</string>
    <string name="language_traditional">繁體中文</string>
    <string name="language_en">English</string>
    <string name="language_settings">语言设置</string>
    <string name="tab_dice">投骰</string>
    <string name="tab_shop">商店</string>
    <string name="tab_character">人物</string>
    <string name="tab_book">书籍</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="delete_confirm">确定删除</string>
    <string name="wait">敬请期待！</string>
    <!-- General settings -->
    <string name="pref_header_general">通用</string>
    <string name="pref_title_name">用户名</string>
    <string name="pref_default_name">匿名</string>
    <string name="pref_mail">邮箱</string>
    <string name="pref_title_switch">开启欢迎界面</string>
    <string name="pref_description_switch">欢迎界面用于应用加载等待</string>
    <string name="pref_title_wait">欢迎页等待时间</string>
    <string-array name="pref_time_list_titles">
        <item>1s</item>
        <item>2s</item>
        <item>3s</item>
    </string-array>
    <string-array name="pref_time_list_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <!-- About -->
    <string name="update">版本更新</string>
    <string name="update_info">更新详情</string>
    <string name="feedback">反馈</string>
    <string name="about_title">版本与反馈</string>
    <string name="oude">欢迎访问欧德的半位面</string>
    <string name="fb_user">当前用户：</string>
    <string name="fb_email">当前邮箱：</string>
    <string name="comment_success">反馈成功！</string>
    <string name="comment_fail">反馈失败！</string>
    <string name="comment_repeat">请不要反馈重复内容！</string>
    <string name="version_current">当前版本：</string>
    <string name="version_latest">最新版本：</string>
    <string name="version_detail">版本详情：</string>
    <string name="version_download">下载地址：</string>
    <string name="version_pwd">提取密码：</string>
    <string name="yun_baidu">百度云</string>
    <string name="callback">已是最新版本</string>
    <string name="Error_TimeOut">更新超时！</string>
    <string name="Error_Intenet">未知网络异常！</string>
    <string name="Error_BadGatway">网络无法连接，请检查网络！</string>
    <!--  Fragment  -->
    <string name="shop_weapon">武器店</string>
    <string name="shop_armor">盔甲店</string>
    <string name="shop_item">杂货铺</string>
    <string name="shop_magic">奥法商会</string>
    <string name="item_name">物品名称:</string>
    <string name="item_source">物品来源:</string>
    <string name="item_type">物品类型:</string>
    <string name="item_price">物品价格:</string>
    <string name="item_weight">物品重量:</string>
    <string name="item_explain">物品介绍:</string>
    <string name="modify">修改</string>
    <string name="buy">购买</string>
    <string name="detail">详情</string>
    <string name="insert">插入</string>
    <string name="operation">操作:</string>
    <string name="filter">筛选:</string>
    <string name="query">查询</string>
	<string name="gold">金币</string>
	<string name="pound">磅</string>
    <string name="imports">导入</string>
	<string name="exports">导出</string>
    <string name="imports_success">导入成功！</string>
    <string name="imports_fail">导入失败！</string>
	<string name="exports_success">导出成功！</string>
	<string name="exports_fail">导出失败！</string>
    <string name="hint_add_cancel">新增已取消</string>
    <string name="hint_name_null">名称不能为空</string>
    <string name="hint_name_exist">相同名称已存在，请更换名称！</string>
    <string name="hint_add_success">新数据插入成功！</string>
    <string name="hint_query_null">查询为空!</string>
    <string name="hint_delete_success">数据已删除</string>
    <string name="hint_delete_undo">撤销删除</string>
    <string name="hint_delete_cancel">删除已取消!</string>
    <string name="hint_modify">请修改至少一个值！</string>
    <string name="hint_modify_success">修改成功！</string>
    <string name="hint_to_achieve">待实现！</string>
    <string name="hint_value_null">某些值不能为空!</string>
    <string name="armor_name">防具名称:</string>
    <string name="armor_source">防具来源:</string>
    <string name="armor_type">防具类型:</string>
    <string name="armor_bonus">盔甲盾牌加值:</string>
    <string name="dex_bonus">最大敏捷加值:</string>
    <string name="armor_minus">防具检定减值:</string>
    <string name="magic_failue">奥术失败概率:</string>
    <string name="armor_price">防具价格:</string>
    <string name="armor_weight">防具重量:</string>
    <string name="armor_explain">防具介绍:</string>
	<string name="weapon_name">武器名称:</string>
    <string name="weapon_source">武器来源:</string>
    <string name="weapon_type">武器类型:</string>
    <string name="attack_type">攻击类型:</string>
    <string name="use_type">使用类型:</string>
    <string name="damage_type">伤害类型:</string>
    <string name="damage_s">伤害(S):</string>
	<string name="damage_m">伤害(M):</string>
	<string name="weapon_crit">武器重击:</string>
	<string name="weapon_range">武器射程:</string>
    <string name="weapon_price">武器价格:</string>
    <string name="weapon_weight">武器重量:</string>
    <string name="weapon_explain">武器介绍:</string>
</resources>
