<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<android.support.v7.widget.Toolbar
		android:id="@+id/about_toolbar"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:background="?attr/colorPrimary"
		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
		app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/about_title"
			android:layout_gravity="center"
			android:id="@+id/aboit_title"
			android:singleLine="true"
			android:textColor="@color/white"
			android:textSize="20sp"
			android:textStyle="bold"
			android:gravity="center"/>

	</android.support.v7.widget.Toolbar>

	<ImageView
		android:layout_width="match_parent"
		android:layout_height="150dp"
		android:layout_below="@id/about_toolbar"
		android:src="@drawable/dnd"
		android:id="@+id/aboutImage"
		android:background="@color/black"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/version"
		android:layout_below="@id/aboutImage"
		android:gravity="center"
		android:id="@+id/version"
		android:textSize="20sp"/>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_below="@id/version"
		android:id="@+id/aboutView1"/>

	<Button
		style="?android:attr/borderlessButtonStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/update"
		android:layout_below="@id/aboutView1"
		android:id="@+id/update"
		android:background="@drawable/button_selector"
		android:gravity="left|center"
		android:paddingLeft="10dp"
		android:textSize="20sp"
		android:textStyle="normal"
		android:textColor="@color/dimgray"/>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_below="@id/update"
		android:id="@+id/aboutTextView1"/>

	<Button
		style="?android:attr/borderlessButtonStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/update_info"
		android:layout_below="@id/aboutTextView1"
		android:id="@+id/info"
		android:background="@drawable/button_selector"
		android:gravity="left|center"
		android:paddingLeft="10dp"
		android:textSize="20sp"
		android:textStyle="normal"
		android:textColor="@color/dimgray"/>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_below="@id/info"
		android:id="@+id/aboutTextView2"/>

	<Button
		style="?android:attr/borderlessButtonStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/feedback"
		android:layout_below="@id/aboutTextView2"
		android:background="@drawable/button_selector"
		android:gravity="left|center"
		android:paddingLeft="10dp"
		android:textSize="20sp"
		android:textStyle="normal"
		android:textColor="@color/dimgray"
		android:id="@+id/feedback"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/oude"
		android:layout_alignParentBottom="true"
		android:gravity="center_horizontal"
		android:textColor="@color/lightskyblue"
		android:layout_marginBottom="10dp"
		android:textSize="15sp"/>

</RelativeLayout>

