<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/shopitemFrameLayout1">

		<android.support.v7.widget.Toolbar
			android:id="@+id/item_toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
			app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

	</FrameLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/shopitemFrameLayout1"
		android:id="@+id/shopitemLinearLayout1">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/filter"
			android:textSize="15sp"
			android:textStyle="bold"
			android:layout_marginLeft="5dp"/>

		<android.support.v7.widget.AppCompatSpinner
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:spinnerMode="dropdown"
			android:popupBackground="@android:color/white"
			android:id="@+id/item_Spinner1"
			android:paddingLeft="5dp"
			android:overlapAnchor="false"
			android:dropDownHorizontalOffset="-50dp"/>

		<android.support.v7.widget.AppCompatSpinner
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:spinnerMode="dropdown"
			android:popupBackground="@android:color/white"
			android:paddingLeft="5dp"
			android:dropDownHorizontalOffset="-50dp"
			android:overlapAnchor="false"
			android:id="@+id/item_Spinner2"/>

	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/shopitemLinearLayout1"
		android:id="@+id/shopitemLinearLayout2">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/operation"
			android:textSize="15sp"
			android:textStyle="bold"
			android:layout_marginLeft="5dp"/>

		<Button
			style="?android:attr/borderlessButtonStyle"
			android:textAllCaps="false"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/query"
			android:layout_marginLeft="10dp"
			android:id="@+id/item_query"
			android:textStyle="bold"
			android:textSize="15sp"/>

		<Button
			style="?android:attr/borderlessButtonStyle"
			android:textAllCaps="false"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/insert"
			android:id="@+id/item_insert"
			android:layout_marginLeft="10dp"
			android:textStyle="bold"
			android:textSize="15sp"/>

	</LinearLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_below="@id/shopitemLinearLayout2"
		android:id="@+id/shopitemView1"
		android:background="#FF000000"/>

	<android.support.v4.widget.SwipeRefreshLayout
		android:id="@+id/item_swipe_refresh"
		android:layout_below="@id/shopitemView1"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<android.support.v7.widget.RecyclerView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:id="@+id/item_RecyclerView1"/>

	</android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>

